2012-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (path_conv::check): Convert device type to FH_FS for
	non-existant files on /dev, unless /dev itself doesn't exist on disk.
	Add comment to explain why.

2012-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* hookapi.cc (rvadelta): Compute max_size using SizeOfRawData rather
	than VirtualSize.

2012-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.cc (_getpass_close_fd): New static pthread cleanup handler.
	(getpass): Rework to use /dev/tty in the first place.  Install
	_getpass_close_fd as pthread cleanup handler.  Flush prompt explicitely.
	Lock input and switch off signal input handling when reading password.

2012-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 13.

2012-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (fhandler_base::stat_fixup): Replace string comparison
	with new device::is_dev_resident() call.

2012-04-02  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* devices.h (lives_in_dev): New field.
	(dev_on_fs): Set bit size.
	(is_dev_resident): Define new method.
	* devices.in: Use different method for labelling requested name for dev
	storage: prefix it with a ='.  Use an actual ':' to denote an internal
	device.
	(exists_console): Avoid repeated test.
	(exists_ntdev_silent): Rename from the less-descriptive exists_ntdevs.
	(dev_dev_storage): Delete unneeded define.
	* gendevices: Add a flag to each line denoting whether the device lives
	in /dev space.
	(generate): Handle special ":" case here for internal devices.  Parse
	=something_dev as requiring a storage location.  Tack the rest of the
	line back onto the reformulated "$rest".
	* devices.cc: Regenerate.

2012-04-02  Corinna Vinschen  <corinna@vinschen.de>

	* devices.h (device::get_device): New method.
	* fhandler_dev.cc (fhandler_dev::readdir): Set st_ino to device number.